--- a/ProjetInfoToolsCRM.csproj
+++ b/ProjetInfoToolsCRM.csproj
@@ -14,6 +14,8 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +51,12 @@
     </Reference>
     <Reference Include="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32cd54395057cec3, processorArchitecture=MSIL">
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
+    </Reference>
+    <Reference Include="MaterialDesignColors, Version=2.0.4.3, Culture=neutral, PublicKeyToken=df2a72020bd7962a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaterialDesignColors.2.0.4\lib\net452\MaterialDesignColors.dll</HintPath>
+    </Reference>
+    <Reference Include="MaterialDesignThemes.Wpf, Version=4.3.0.3, Culture=neutral, PublicKeyToken=df2a72020bd7962a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaterialDesignThemes.4.3.0\lib\net452\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.27.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.27\lib\net452\MySql.Data.dll</HintPath>
@@ -101,23 +109,30 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BDD\bdd.cs" />
-    <Compile Include="BDD\bddEmploye.cs" />
+    <Compile Include="BDD\bddCommercial.cs" />
     <Compile Include="BDD\bddClient.cs" />
+    <Compile Include="BDD\bddGraphique.cs" />
+    <Compile Include="BDD\bddLigneFacture.cs" />
     <Compile Include="BDD\bddRDV.cs" />
     <Compile Include="BDD\bddFacture.cs" />
     <Compile Include="BDD\bddProduit.cs" />
-    <Compile Include="BDD\bddProspect.cs" />
     <Compile Include="Modèles\Client.cs" />
-    <Compile Include="Modèles\Employe.cs" />
+    <Compile Include="Modèles\Commercial.cs" />
+    <Compile Include="Modèles\LigneFacture.cs" />
     <Compile Include="Modèles\RDV.cs" />
     <Compile Include="Modèles\Produit.cs" />
     <Compile Include="Modèles\Facture.cs" />
-    <Compile Include="Modèles\Prospect.cs" />
-    <Compile Include="Vues\ViewEmploye.xaml.cs">
-      <DependentUpon>ViewEmploye.xaml</DependentUpon>
+    <Compile Include="Vues\ViewCommercial.xaml.cs">
+      <DependentUpon>ViewCommercial.xaml</DependentUpon>
     </Compile>
     <Compile Include="Vues\ViewClient.xaml.cs">
       <DependentUpon>ViewClient.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Vues\ViewGraphique.xaml.cs">
+      <DependentUpon>ViewGraphique.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Vues\ViewLigneFacture.xaml.cs">
+      <DependentUpon>ViewLigneFacture.xaml</DependentUpon>
     </Compile>
     <Compile Include="Vues\ViewRDV.xaml.cs">
       <DependentUpon>ViewRDV.xaml</DependentUpon>
@@ -127,9 +142,6 @@
     </Compile>
     <Compile Include="Vues\ViewProduit.xaml.cs">
       <DependentUpon>ViewProduit.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Vues\ViewProspect.xaml.cs">
-      <DependentUpon>ViewProspect.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -151,13 +163,21 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Vues\ViewEmploye.xaml">
+    <Page Include="Vues\ViewCommercial.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Vues\ViewClient.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Vues\ViewGraphique.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Vues\ViewLigneFacture.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Vues\ViewRDV.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -168,10 +188,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Vues\ViewProduit.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Vues\ViewProspect.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -205,4 +221,11 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\MaterialDesignThemes.4.3.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.3.0\build\MaterialDesignThemes.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\MaterialDesignThemes.4.3.0\build\MaterialDesignThemes.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MaterialDesignThemes.4.3.0\build\MaterialDesignThemes.targets'))" />
+  </Target>
 </Project>
